# lisa-btc-trade-pipeline

./: .coverage.DESKTOP-5I5UCO7.94722.XPIsvppx.wgw1  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CI_STATUS_REPORT.md  CONTRIBUTING.md  COVERAGE_AUTOMATION_COMPLETE.md  COVERAGE_SPRINT_FINAL_REPORT.md  COVERAGE_SPRINT_PROGRESS.md  Dockerfile  FINAL_REPORT_TASK6_QUALITY.md  LICENSE  Makefile  PHASE4_READY.md  PR_SUMMARY.md  QUALITY_AUDIT_REPORT.md  QUALITY_IMPROVEMENTS_SUMMARY.md  QUALITY_IMPROVEMENT_SUMMARY.md  README.md  START_COVERAGE_BOT.md  TASK4_COMPLETION_REPORT.md  btc_preprocess_pipeline.yaml  build_and_push.bat  feature_engineering.py  fix_black_formatting.py  fix_linting.py  indicators.yaml  mypy.ini  pyproject.toml  requirements-minimal.txt  requirements.txt  review.md  rl_env.py  setup.py  train_rl.py  verify_risk_management.py  vertex_train.bat
.github/: COVERAGE_BOT_SETUP.md
.github/workflows/: ci.yml  coverage-bot.yml  e2e.yml
configs/: project_config.yaml  trading_config.yaml
data_collection/: daily_preprocessor.py  data_collector.py  gcs_uploader.py
docs/: CI_PASS_REPORT.md  CONTRIBUTING.md  COVERAGE_PHASE3_SUMMARY.md  GITHUB_SECRETS_SETUP.md  PHASE4_ROADMAP.md  QUALITY_AUDIT.md  SELF_HEALING_COVERAGE.md  TASK4_REINFORCEMENT_LEARNING.md  feature_engineering.md
features/: feature_engineering.py
reports/: coverage_report_latest.md
scripts/: backtest_tau_sac.py  coverage_autofix.py  fetch_gdrive_data.sh  fix_mypy_errors.py  generate_focus_tests.py  generate_phase3_tests.py  generate_regression_test.py  open_phase3_pr.sh  quick_bot_start.sh  run_ci_checks.py  start_collector.sh  stop_collector.sh  test_feature_engineering.py  train_tau_sac.py  update_ci_status.py
src/: __init__.py  api.py  config.py  main.py  utils.py
src/api/: __init__.py  api.py  prediction_server.py
src/backtesting/: __init__.py  engine.py
src/data_collection/: __init__.py  binance_websocket.py  gcs_uploader.py  integrated_collector.py
src/data_processing/: __init__.py  _io.py  daily_preprocessor.py  validator.py
src/feature_engineering/: __init__.py  base.py  engineer.py  microstructure.py  registry.py  selector.py  sentiment.py
src/features/: feature_engineering.py
src/monitoring/: __init__.py  alert_manager.py  metrics_collector.py  performance_monitor.py  prometheus_exporter.py
src/optimization/: __init__.py  hyperopt.py
src/pipeline/: __init__.py  batch_predict.py  integration.py  vertex_orchestrator.py
tests/: __init__.py  conftest.py  conftest_auto.py  test_advanced_coverage.py  test_all_modules_coverage.py  test_api.py  test_api_comprehensive.py  test_api_coverage.py  test_backtesting_basic.py  test_batch_predict.py  test_binance_websocket.py  test_boost_coverage_to_85.py  test_complete_coverage_boost.py  test_comprehensive_85.py  test_comprehensive_coverage.py  test_config.py  test_coverage_boost.py  test_daily_preprocessor.py  test_data_collection.py  test_data_processing.py  test_data_processing_basic.py  test_edge_cases_coverage.py  test_feature_engineering.py  test_feature_engineering_basic.py  test_feature_engineering_comprehensive.py  test_feature_engineering_modules.py  test_features.py  test_fixed_coverage.py  test_full_coverage.py  test_gcs_uploader.py  test_hyperopt.py  test_hyperopt_coverage.py  test_indicators.py  test_integration_basic.py  test_io_abstraction.py  test_main.py  test_minimal_coverage.py  test_monitoring.py  test_pipeline_coverage.py  test_pipeline_integration.py  (+18 more)
(+64 files in other folders)
